--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/PYT 0407/PYT 0407.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/PYT 0407/PYT 0407.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>PEUGEOT BERLINA 206 XR 5P 1.4 PRESENCE</h1>
+            <p class="precio">$4,500</p>
             <div class="detalles">
-                <span>2012</span>
-                <span>Placa: A</span>
+                <span>2003</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">PEUGEOT</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">BERLINA 206 XR 5P 1.4 PRESENCE</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,11 +86,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">Hatchback</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
-                    <span class="info-value">2012</span>
+                    <span class="info-value">2003</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Combustible:</span>
@@ -98,11 +98,11 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Color:</span>
-                    <span class="info-value">Plateado</span>
+                    <span class="info-value">Verde</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,8 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Peugeot 206 XR 1.4 “Presencia” (2003, 5 puertas) es un hatchback compacto con motor de 1.4 litros a gasolina, diseñado para ser práctico, económico y funcional. Su potencia de aproximadamente 75 CV y el consumo moderado lo hacen ideal para desplazamientos urbanos y uso diario.
+</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +121,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/adada.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -197,7 +198,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
@@ -215,7 +216,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$00.00</span>
                 </div>
             </div>
         </div>
@@ -239,7 +240,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">1 dueño</span>
                 </div>
             </div>
         </div>
