--- a/CATEGORIAS-VEHICULOS/vehiculos individuales/IBB 3201/IBB 3201.html
+++ b/CATEGORIAS-VEHICULOS/vehiculos individuales/IBB 3201/IBB 3201.html
@@ -50,11 +50,11 @@
     <div class="container">
         <!-- Información destacada arriba del carrusel -->
         <div class="info-destacada">
-            <h1>HYUNDAI I10 CM 5DR 1.1</h1>
-            <p class="precio">$6,900</p>
+            <h1>SUZUKI GRAND VITARA SZ 2.0L 5P TM 4X2 FL</h1>
+            <p class="precio">$11,500</p>
             <div class="detalles">
                 <span>2012</span>
-                <span>Placa: A</span>
+                <span>Placa: P</span>
             </div>
         </div>
 
@@ -74,11 +74,11 @@
             <div class="info-grid">
                 <div class="info-item">
                     <span class="info-label">Marca:</span>
-                    <span class="info-value">HYUNDAI</span>
+                    <span class="info-value">SUZUKI</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Modelo:</span>
-                    <span class="info-value">I10 CM 5DR 1.1</span>
+                    <span class="info-value">GRAND VITARA SZ 2.0L 5P TM 4X2 FL</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Transmisión:</span>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Subtipo:</span>
-                    <span class="info-value">sedan</span>
+                    <span class="info-value">SUV</span>
                 </div>
                 <div class="info-item">
                     <span class="info-label">Año:</span>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="info-item">
                     <span class="info-label">Placa:</span>
-                    <span class="info-value">Azuay</span>
+                    <span class="info-value">Pichincha</span>
                 </div>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <!-- Descripción del vehículo -->
         <div class="descripcion">
             <h2>Descripción</h2>
-            <p>El Hyundai i10 1.1 de 2012, versión de 5 puertas, es un auto compacto diseñado para la ciudad, con tracción delantera y motor de gasolina de 1086 cc (4 cilindros en línea) que entrega alrededor de 69 caballos de fuerza</p>
+            <p>El Chevrolet Grand Vitara SZ 2.0 L 5P TM 4×2 FL 2012 es un SUV compacto de 5 puertas con motor 2.0 litros a gasolina, tracción delantera (4×2) y transmisión manual. Ofrece un equilibrio entre espacio interior, confort y versatilidad, con buen desempeño para uso urbano y en carretera, diseño robusto típico de SUVs y mantenimiento accesible, ideal para familias o trayectos diarios.</p>
         </div>
 
         <!-- Sección de video y contacto -->
@@ -120,7 +120,7 @@
                 <h2>Video del vehículo</h2>
                 <a href="https://www.tiktok.com/@gavilmotors?is_from_webapp=1&sender_device=pc" target="_blank">
                     <video controls muted loop>
-                        <source src="imgs/I10.mp4" type="video/mp4">
+                        <source src="imgs/asd.mp4" type="video/mp4">
                         Tu navegador no soporta el elemento de video.
                     </video>
                 </a>
@@ -197,11 +197,11 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$74.22</span>
+                    <span class="dato-value">$83.78</span>
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Provincia:</span>
-                    <span class="dato-value">Quito - Bicentenario</span>
+                    <span class="dato-value">Esmeraldas</span>
                 </div>
             </div>
         </div>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="dato-item">
                     <span class="dato-label">Deuda:</span>
-                    <span class="dato-value">$61.00</span>
+                    <span class="dato-value">$391.56</span>
                 </div>
             </div>
         </div>
@@ -239,7 +239,7 @@
             <div class="datos-grid">
                 <div class="dato-item">
                     <span class="dato-label">Cantidad:</span>
-                    <span class="dato-value">4 dueños</span>
+                    <span class="dato-value">6 dueños</span>
                 </div>
             </div>
         </div>
